Documented iframe issue on mobile Safari browsers unresolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,7 @@ strong {
   -webkit-box-shadow: inset 0px 1px 0px 0px #a6827e;
   box-shadow: inset 0px 1px 0px 0px #a6827e;
   background: -o-linear-gradient(top, #7d5d3b 5%, #634b30 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #7d5d3b), to(#634b30));
   background: linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%);
   background-color: #7d5d3b;
   border-radius: 3px;
@@ -229,7 +230,7 @@ strong {
   z-index: 1;
   display: none;
   background-color: var(--main-bg);
-  width: 95%; 
+  width: 95%;
   padding: 0.5rem 0;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
@@ -264,6 +265,7 @@ strong {
   -webkit-box-shadow: inset 0px 1px 0px 0px #a6827e;
   box-shadow: inset 0px 1px 0px 0px #a6827e;
   background: -o-linear-gradient(top, #7d5d3b 5%, #634b30 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #7d5d3b), to(#634b30));
   background: linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%);
   background-color: #7d5d3b;
   border-radius: 3px;
@@ -277,6 +279,7 @@ strong {
 .api-button:hover {
   color: var(--off-white);
   background: -o-linear-gradient(top, #634b30 5%, #7d5d3b 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #634b30), to(#7d5d3b));
   background: linear-gradient(to bottom, #634b30 5%, #7d5d3b 100%);
 }
 
@@ -355,13 +358,6 @@ strong {
   margin: 5px 10px;
 }
 
-.iframe {
-  position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-}
 
 #map,
 .reserve-placeholder img {
